--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,10 @@ jobs:
       - run:
           name: Deploy application
           command: ./deploy_script.sh
+      - run:
+          name: Check if app is running
+          command: curl -f http://localhost:3000 || exit 1
+    
 
 workflows:
   version: 2
