--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - checkout
       - run:
           name: Install dependencies
-          command: npm install
+          command: npm install --save
       - run:
           name: Run build
           command: npm run build
@@ -26,7 +26,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:  
-          docker_layer_caching: true  
+          docker_layer_caching: true
       - run:
           name: Set execute permission
           command: chmod +x deploy_script.sh
