--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,10 +39,17 @@ jobs:
       - image: circleci/node:14
     steps:
       - run:
-          name: Install Ngrok
+          name: Update sources.list for Debian Stretch
           command: |
-            sudo apt-get update
-            sudo apt-get install -y ngrok
+            echo "deb http://archive.debian.org/debian/ stretch main" > /etc/apt/sources.list
+            echo "deb http://archive.debian.org/debian-security/ stretch/updates main" >> /etc/apt/sources.list
+            echo "Acquire::Check-Valid-Until false;" >> /etc/apt/apt.conf.d/10disable-check-valid-until
+      - run:
+          name: Update package lists
+          command: sudo apt-get update
+      - run:
+          name: Install Ngrok
+          command: sudo apt-get install -y ngrok
       - run:
           name: Start Ngrok
           command: ngrok http 3000  # แทนที่ 3000 ด้วยพอร์ตที่แอปพลิเคชันรันอยู่
