--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,24 +35,24 @@ jobs:
           command: ./deploy_script.sh
 
   start_ngrok:
-    docker:
-      - image: circleci/node:14
-    steps:
-      - run:
-          name: Update sources.list for Debian Stretch
-          command: |
-            echo "deb http://archive.debian.org/debian/ stretch main" > /etc/apt/sources.list
-            echo "deb http://archive.debian.org/debian-security/ stretch/updates main" >> /etc/apt/sources.list
-            echo "Acquire::Check-Valid-Until false;" >> /etc/apt/apt.conf.d/10disable-check-valid-until
-      - run:
-          name: Update package lists
-          command: sudo apt-get update
-      - run:
-          name: Install Ngrok
-          command: sudo apt-get install -y ngrok
-      - run:
-          name: Start Ngrok
-          command: ngrok http 3000  # แทนที่ 3000 ด้วยพอร์ตที่แอปพลิเคชันรันอยู่
+  docker:
+    - image: circleci/node:14
+  steps:
+    - run:
+        name: Update sources.list for Debian Stretch
+        command: |
+          echo "deb http://archive.debian.org/debian/ stretch main" | sudo tee /etc/apt/sources.list
+          echo "deb http://archive.debian.org/debian-security/ stretch/updates main" | sudo tee -a /etc/apt/sources.list
+          echo "Acquire::Check-Valid-Until false;" | sudo tee /etc/apt/apt.conf.d/10disable-check-valid-until
+    - run:
+        name: Update package lists
+        command: sudo apt-get update
+    - run:
+        name: Install Ngrok
+        command: sudo apt-get install -y ngrok
+    - run:
+        name: Start Ngrok
+        command: ngrok http 3000  # แทนที่ 3000 ด้วยพอร์ตที่แอปพลิเคชันรันอยู่
 
 workflows:
   version: 2
