--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,8 +48,15 @@ jobs:
           name: Update package lists
           command: sudo apt-get update
       - run:
+          name: Install dependencies
+          command: sudo apt-get install -y wget unzip
+      - run:
           name: Install Ngrok
-          command: sudo apt-get install -y ngrok
+          command: |
+            wget https://bin.equinox.io/c/111111/ngrok-stable-linux-amd64.zip # แก้ไข URL ให้เป็นเวอร์ชันล่าสุดของ Ngrok
+            unzip ngrok-stable-linux-amd64.zip
+            sudo mv ngrok /usr/local/bin
+            rm ngrok-stable-linux-amd64.zip
       - run:
           name: Start Ngrok
           command: ngrok http 3000  # แทนที่ 3000 ด้วยพอร์ตที่แอปพลิเคชันรันอยู่
